VL #42 Docker container created fro basket api

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,8 +1,12 @@
 version: '3.4'
 
+# defined manually
 services:
   catalogdb:
     image: mongo
+  
+  basketdb:
+    image: redis:alpine  #alpine is light version of redis 
 
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
@@ -10,5 +14,12 @@ services:
       context: .
       dockerfile: Services/Catalog/Catalog.API/Dockerfile
 
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: Services/Basket/Basket.API/Dockerfile
+
+#defined manually
 volumes:
   mongo_data:
