--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -1,5 +1,6 @@
 version: '3.4'
 
+#set manually
 services:
   catalogdb:
     container_name: catalogdb
@@ -8,13 +9,32 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
-          
+
+  basketdb:
+    container_name: basketdb
+    restart: always
+    ports:
+      - "6379:6379"
+ #         
   catalog.api:
-    container_name: catalog.api
+    container_name: catalog.api     #set manually
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017"
-    depends_on:
-      - catalogdb
-    ports:
+      - "DatabaseSettings:ConnectionString=mongodb://catalogdb:27017"       #set manually
+    depends_on:     #set manually
+      - catalogdb   
+    ports:      #set manually
       - "8000:80"
+
+
+  basket.api:
+    container_name: basket.api  #set manually
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings:ConnectionString=basketdb:6379"  #set manually
+    depends_on: #set manually
+      - basketdb
+    ports:
+      - "8001:80"  #set manually
+
+
