--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -16,6 +16,18 @@ services:
     ports:
       - "6379:6379"
 
+  postgresdb:
+    container_name: postgresdb
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin1234
+      - POSTGRE_DB=DiscountDb
+    restart: always
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+
   portainer:
     container_name: portainer
     restart: always
