--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -8,6 +8,9 @@ services:
   basketdb:
     image: redis:alpine  #alpine is light version of redis 
    
+  discountdb:
+    image: postgres
+
   portainer:
     image: portainer/portainer-ce
 
@@ -27,3 +30,4 @@ services:
 volumes:
   mongo_data:
   portainer_data:
+  postgres_data:
