--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -16,8 +16,8 @@ services:
     ports:
       - "6379:6379"
 
-  postgresdb:
-    container_name: postgresdb
+  discountdb:
+    container_name: discountdb
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin1234
@@ -27,6 +27,17 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+
+  pgadmin:
+      container_name: pgadmin
+      environment:
+        - PGADMIN_DEFAULT_EMAIL=hafizmzahid2@gmail.com
+        - PGADMIN_DEFAULT_PASSWORD=admin1234
+      restart: always
+      ports:
+        - "5050:80"
+      volumes:
+        - pgadmin_data:/root/.pgadmin 
 
   portainer:
     container_name: portainer
