--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -29,16 +29,17 @@ services:
       - postgres_data:/var/lib/postgresql/data/
 
   pgadmin:
-      container_name: pgadmin
-      environment:
-        - PGADMIN_DEFAULT_EMAIL=hafizmzahid2@gmail.com
-        - PGADMIN_DEFAULT_PASSWORD=admin1234
-      restart: always
-      ports:
+    container_name: pgadmin
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=hafizmzahid2@gmail.com
+      - PGADMIN_DEFAULT_PASSWORD=admin1234
+    restart: always
+    ports:
         - "5050:80"
-      volumes:
-        - pgadmin_data:/root/.pgadmin 
+    volumes:
+      - pgadmin_data:/root/.pgadmin
 
+  
   portainer:
     container_name: portainer
     restart: always
@@ -70,4 +71,15 @@ services:
     ports:
       - "8001:80"  #set manually
 
+
+
+  discount.api:
+    container_name: discount.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - DatabaseSettings:ConnectionString=Server=discountdb;port=5432;Database=discountdb;User Id=admin;Password=admin1234
+    depends_on:
+      - discountdb
+    ports:
+      - "8002:80"
 
